syntax = "proto3";

package kopia.repo;
option go_package = "github.com/kopia/kopia/repo";

enum EncryptionAlgorithm {
    NONE = 0;
    AES = 1;
}

// ObjectIDFormat describes the format of repository objects.
enum ObjectIDFormat {
    // Format not specified.
    INVALID = 0;

    // MD5 (no encryption, MD5 hashing, only used for testing)
    TESTONLY_MD5 = 1;

    // HMAC-SHA256 hash of content used as object ID, no encryption.
    UNENCYPTED_HMAC_SHA256 = 2;

    // HMAC-SHA256 hash folded into 128 bits used as object ID, no encryption.
    UNENCYPTED_HMAC_SHA256_128 = 3;

    // HMAC-SHA512 hash of content, top part of the hash used as 256-bit object ID,
    // bottom part used as 256-bit encryption key.
    ENCRYPTED_HMAC_SHA512_AES256 = 4;

    // HMAC-SHA512_384 hash over contents, top part of the hash used as 128-bit object ID,
    // bottom part used as 256-bit encryption key.
    ENCRYPTED_HMAC_SHA512_384_AES256 = 5;
}

// Format describes the format of object data.
message Format {
    int32 version = 1;
    ObjectIDFormat object_format = 2;
    bytes secret = 3;
    int32 max_inline_blob_size = 4;
    int32 max_blob_size = 5;
}
